# assembly-stats

./: .gitignore  Cargo.toml  Danaus_plexippus_v3.stats.json  Dplex.html  Hmel1_vs_Hmel2.html  Hmel_rescaled.html  Index.html  LICENSE  Operophtera_brumata_v1.stats.json  README.md  assembly-stats.html  index.html  new_format.html
css/: assembly_stats.css  circle-plot.css  square-plot.css  table.css
js/: assembly_stats.js  circle-plot.js  square-plot.js  table.js
json/: Heliconius_erato_v1.assembly-stats.json  output.assembly-stats.json
pl/: asm2stats.minmaxgc.pl  asm2stats.pl
src/: assembly.rs  cli.rs  io.rs  lib.rs  main.rs  seq_stats.rs  snail.rs
