[package]
name = "snail_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bio = "1.0.0"
clap = { version = "4.0.26", features = [ "derive" ] }
clap-num = "1.0.2"
indicatif = "0.17.2"
rayon = "1.5.3"
serde = "1.0.147"
serde_json = "1.0.89"
